--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,7 @@
 !!!
 %html{:lang => "en"}
   %head
-    %title Open Data around the World!
+    %title Bike Parking around Washington, DC
     %meta{:"http-equiv" => "Content-Type",       :content => "text/html; charset=utf-8"}
     %meta{:"http-equiv" => "Content-Style-Type", :content => "text/css"}
 
@@ -21,8 +21,7 @@
   %body
     #container
       .page-header
-        %h1
-          Open Data around the World!
+        %h1 Bike Parking around Washington, DC
 
       = yield
     
